--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,33 +3,34 @@ ul{
 	display: inline-block;
 	vertical-align: top;
 	list-style-type: none;
-	padding-left: 0;
+	padding: 0 5px;
+	margin: 0;
 }
 
 #input-list{
 	text-align: right;
-	padding: 4px;
 }
 
 #control-list{
 	text-align: left;
-	padding: 4px;
 }
 
 li{
 	font-size: 14px;
+	line-height: 24px;
 	height: 24px;
 }
 
 .connector{
 	display: block;
-	width: 40px;
-	height: 40px;
+	width: 20px;
+	height: 20px;
 	border-radius: 25px;
 	background-color: rgb(255, 0, 0);
 }
 
 line{
 	stroke: rgb(255, 0, 0);
-	stroke-width: 2;
+	stroke-width: 5;
+	cursor: pointer;
 }
