--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,9 @@
 /* your style begins here */
+* {
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */;
+}
 
 ul{
 	display: block;
