--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,36 @@
   box-sizing: border-box;         /* Opera/IE 8+ */;
 }
 
-ul{
+body{
+	font-size: 14px;
+	line-height: 16px;
+}
+
+h1, h2, h3, h4, h5, h6, p, select{
+	margin: 0 0 5px 0;
+}
+
+.control-parent{
+	width: 240px;
+	display: inline-block;
+	border: 1px solid black;
+	padding: 10px;
+	margin-right: 10px;
+}
+
+.control-parent .input,
+.control-parent .control{
+	width: 50%;
+	display: inline-block;
+}
+
+.data{
+	width: 100%;
+	height: 240px;
+	overflow: scroll;
+}
+
+/*ul{
 	display: block;
 	list-style-type: none;
 	padding: 0 5px;
@@ -44,10 +73,10 @@ ul{
 	height: 20px;
 	border-radius: 25px;
 	background-color: rgb(255, 0, 0);
-}*/
+}
 
 line{
 	stroke: rgb(255, 0, 0);
 	stroke-width: 5;
 	cursor: pointer;
-}
+}*/
