--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,12 +14,22 @@ h1, h2, h3, h4, h5, h6, p, select{
 	margin: 0 0 5px 0;
 }
 
+button{
+	margin: 10px 0;
+	display: block;
+}
+
+#ui{
+	
+}
+
 .control-parent{
 	width: 240px;
 	display: inline-block;
 	border: 1px solid black;
 	padding: 10px;
 	margin-right: 10px;
+	text-align: left;
 }
 
 .control-parent .input,
@@ -28,7 +38,8 @@ h1, h2, h3, h4, h5, h6, p, select{
 	display: inline-block;
 }
 
-.data{
+.data-input,
+.data-control{
 	width: 100%;
 	height: 240px;
 	overflow: scroll;
