--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,13 +33,13 @@ button{
 	text-align: left;
 }
 
-.control-parent .input,
+.control-parent .output,
 .control-parent .control{
 	width: 50%;
 	display: inline-block;
 }
 
-.data-input,
+.data-output,
 .data-control{
 	width: 100%;
 	height: 240px;
@@ -53,7 +53,7 @@ ul{
 	margin: 0;
 }
 
-/*#input-list li.data-connection,
+/*#output-list li.data-connection,
 #control-list li.data-connection,
 .connector{
 	width: calc(100% / 20);		
@@ -64,7 +64,7 @@ ul{
 	border: 2px solid white;
 }
 
-#input-list li{
+#output-list li{
 	vertical-align: top;
 }
 
