--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,7 @@ button{
 
 .control-parent{
 	width: 240px;
+	height: 240px;
 	display: inline-block;
 	border: 1px solid black;
 	padding: 10px;
@@ -37,13 +38,14 @@ button{
 .control-parent .control{
 	width: 50%;
 	display: inline-block;
+	vertical-align: top;
 }
 
 .data-output,
 .data-control{
 	width: 100%;
-	height: 240px;
-	overflow: scroll;
+	/*height: 240px;*/
+	/*overflow: scroll;*/
 }
 
 ul{
